cluster/monitoring/glitchtip/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: glitchtip
    app.kubernetes.io/version: 6.2.6
  name: glitchtip
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: glitchtip
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: glitchtip
        app.kubernetes.io/version: 6.2.6
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: glitchtip/glitchtip:6.2.6
        name: glitchtip
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - mountPath: /var/lib/glitchtip
          name: uploads-volume
        - mountPath: /tmp
          name: tmp-volume
        - mountPath: /code/static
          name: pennant-volume
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 2Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 5000
          runAsGroup: 5000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        readinessProbe:
          httpGet:
            path: /_health/
            port: 8000
          periodSeconds: 15
      volumes:
      - name: glitchtip-secret-guard-volume
        secret:
          secretName: glitchtip-secret
      - name: glitchtip-db-secret-guard-volume
        secret:
          secretName: glitchtip-db-secret
      - name: uploads-volume
        persistentVolumeClaim:
          claimName: glitchtip-uploads-pvc
      - name: tmp-volume
        emptyDir: {}
      - name: pennant-script-volume
        configMap:
          name: glitchtip-pennant
      - name: pennant-volume
        emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
